integrations listclinton app, api

--- a/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
+++ b/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
@@ -21,7 +21,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <div class="header-inline">
-        <span class="title-app">Gym App</span>
+        <span class="title-app">Donaton App</span>
         <div class="zone-user">
           <button mat-button [matMenuTriggerFor]="menu">Oscar Rojas</button>
           <mat-menu #menu="matMenu">
