--- a/src/App/donatonapp/src/app/users-app/components/list/list.component.html
+++ b/src/App/donatonapp/src/app/users-app/components/list/list.component.html
@@ -37,19 +37,19 @@
       <!-- Edit Column -->
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit </th>
-      <td mat-cell *matCellDef="let element"> <button mat-raised-button (click)="edit.emit(element)" >Edit</button> </td>
+      <td mat-cell *matCellDef="let element"> <button mat-raised-button (click)="edit.emit(element)" >Editar</button> </td>
     </ng-container>
 
       <!-- Detail Column -->
     <ng-container matColumnDef="detail">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Detail </th>
-      <td mat-cell *matCellDef="let element"> <button mat-raised-button color="accent" (click)="detail.emit(element)">Detail</button> </td>
+      <td mat-cell *matCellDef="let element"> <button mat-raised-button color="accent" (click)="detail.emit(element)">Detalle</button> </td>
     </ng-container>
 
       <!-- Delete Column -->
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete </th>
-      <td mat-cell *matCellDef="let element"><button mat-raised-button color="warn" (click)="delete.emit(element)">Delete</button> </td>
+      <td mat-cell *matCellDef="let element"><button mat-raised-button color="warn" (click)="delete.emit(element)">Eliminar</button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
