creacion de forms para donations

--- a/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
+++ b/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
@@ -7,6 +7,7 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]="['/home']">Home</a>
       <a mat-list-item [routerLink]="['/users-app']">Usuarios Apps</a>
+      <a mat-list-item [routerLink]="['/donations']">Donaciones</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
