--- a/src/App/donatonapp/src/app/donations/container/container.component.html
+++ b/src/App/donatonapp/src/app/donations/container/container.component.html
@@ -1,1 +1,8 @@
-<p>container works!</p>
+<app-loading [isLoading]="(state$ | async ).isLoading">
+    <app-header-pages [headerModel]="headerDonations"></app-header-pages>
+    <div class="inner-content">
+       <app-dashboard>
+            <h1>Algo</h1>
+       </app-dashboard>
+    </div>
+</app-loading>
