--- a/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
+++ b/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
@@ -25,8 +25,7 @@
         <div class="zone-user">
           <button mat-button [matMenuTriggerFor]="menu">Oscar Rojas</button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
-            <button mat-menu-item>Item 2</button>
+            <button mat-menu-item (click)="logout()">Salir</button>
           </mat-menu>
         </div>
       </div>
