--- a/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
+++ b/src/App/donatonapp/src/app/layout/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport 
+  <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
@@ -23,7 +23,7 @@
       <div class="header-inline">
         <span class="title-app">Donaton App</span>
         <div class="zone-user">
-          <button mat-button [matMenuTriggerFor]="menu">Oscar Rojas</button>
+          <button mat-button [matMenuTriggerFor]="menu">{{userLoginNanme}}</button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="logout()">Salir</button>
           </mat-menu>
